# skt-ai-adoption-plan

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  manufacturer-benefits-extension-plan-feature.md  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: calculate-cost.md  create-issue.md  design-benefit.md  design-low-cost-plan.md  export-pdf.md  export-simulation-report.md  list-designs.md  peer-review.md  simulate-migration.md
docs/: 5g-low-cost-plan-feature.md  USAGE.md
mcp_servers/calculator/: __init__.py  server.py
mcp_servers/pdf/: __init__.py  server.py
mcp_servers/scraper/: __init__.py  server.py
mcp_servers/simulation/: __init__.py  server.py
mcp_servers/storage/: __init__.py  schema.sql  schema_down.sql  server.py
src/: __init__.py
src/models/: __init__.py  benefit.py  design.py  rate_plan.py  simulation.py
tests/: test_simulation_e2e.py
