 [project]
 name = "skt-ai-adoption-plan"
 version = "0.1.0"
 description = "SKT 요금제 설계 시스템 MCP 서버 모음"
 requires-python = ">=3.11"
dependencies = [
  "mcp",
  "httpx",
  "beautifulsoup4",
  "reportlab",
  "pandas",
  "openpyxl",
]
 
 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
